syntax = "proto3";

package golem.worker;

import "golem/component/component_id.proto";

message WorkerId {
  golem.component.ComponentId component_id = 1;
  string name = 2;
}
